
include_HEADERS = Toolbox.h   \
	tb_Errno.h                  \
	tb_ClassBuilder.h           \
	Memory.h                    \
	fastmem.h                   \
	Error.h                     \
	Objects.h                   \
	Composites.h                \
	Scalars.h                   \
	Containers.h                \
	iterators.h                 \
	Hash.h                      \
	Vector.h                    \
	Serialisable_interface.h    \
	Iterable_interface.h        \
	C_Castable_interface.h      \
	XmlRpc.h


