
include_HEADERS = Toolbox.h   \
	tb_Errno.h                  \
	tb_ClassBuilder.h           \
	Ktypes.h                    \
	Memory.h                    \
	fastmem.h                   \
	Error.h                     \
	Objects.h                   \
	Composites.h                \
	Scalars.h                   \
	Containers.h                \
	iterators.h                 \
	Hash.h                      \
	Pointer.h                   \
	Vector.h                    \
	Num.h                       \
	String.h                    \
	Bool.h                      \
	Serialisable_interface.h    \
	Iterable_interface.h        \
	C_Castable_interface.h      \
	Tlv.h                       \
	Rpc.h                       \
	XmlRpc.h


