INCLUDES = -I. -I$(top_srcdir)/include
AM_CFLAGS   = @COMMON_CFLAGS@

noinst_LTLIBRARIES = libContainers.la

libContainers_la_SOURCES  = \
	Ktypes.c             \
	Containers.c         \
	Vector.c             \
	vector_iterators.c   \
	Hash_impl.c          \
	Hash.c               \
	hash_iterators.c     \
	Dict.c               \
	bplus_tree.c         \
	bpt_iterators.c      \
	Iterable_interface.c
libContainers_la_LIBADD   = 
libContainers_la_LDFLAGS  = 




