INCLUDES = -I. -I$(top_srcdir)/include
AM_LDFLAGS  = 
AM_CFLAGS   = @COMMON_CFLAGS@

noinst_LTLIBRARIES = libScalars.la

libScalars_la_SOURCES  = \
	codecs.c      \
	strfmt.c     \
	Scalars.c    \
	String.c     \
	Raw.c        \
	Num.c        \
	C_Castable_interface.c      \
	Pointer.c    
libScalars_la_LIBADD   = 
libScalars_la_LDFLAGS  = 




